--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
         </div>
         <div class="type-msg flex">
           <input type="text" placeholder="Type a message…" autocomplete="off">
-          <span></span>
+          <button>&#62;</button>
         </div>
       </div>
 
@@ -84,7 +84,7 @@
 
   </div>
 
-
+  <div class="bg-shape2"></div>
 </body>
 
 </html>
